Change mask color of minimap component

--- a/src/renderer/src/assets/css/vueflow.css
+++ b/src/renderer/src/assets/css/vueflow.css
@@ -1,5 +1,5 @@
 .dark .vue-flow__minimap{
-    background-color: #222539;
+    background-color: #2E324D;
 }
 .dark .vue-flow__minimap-mask {
     fill: #222539;
