--- a/src/renderer/src/assets/css/tailwind.css
+++ b/src/renderer/src/assets/css/tailwind.css
@@ -1,12 +1,19 @@
 @tailwind base;
 @tailwind utilities;
 
-@layer base{
+@layer base {
     html {
         font-family: 'Inter', 'sans-serif';
     }
 }
 
-body{
+@layer utilities {
+    .drag-title-bar {
+        -webkit-app-region: drag;
+        user-select: none;
+    }
+}
+
+body {
     overflow: hidden;
 }
