--- a/src/renderer/src/assets/css/tailwind.css
+++ b/src/renderer/src/assets/css/tailwind.css
@@ -4,6 +4,7 @@
 @layer base {
     html {
         font-family: 'Inter', 'sans-serif';
+        font-feature-settings: "ss01", "ss02", "ss03", "ss04", "ss05", "ss06", "ss07", "ss08", "calt", "dlig";
     }
 }
 
