--- a/src/renderer/src/Assets/CSS/vueflow.css
+++ b/src/renderer/src/Assets/CSS/vueflow.css
@@ -1,6 +1,11 @@
 .vue-flow__node{
     outline: none;
 }
+
+.dark .vue-flow__background{
+    background-color: #090B10;
+}
+
 .dark .vue-flow__minimap{
     background-color: #2E324D;
 }
