--- a/src/renderer/src/Assets/CSS/vueflow.css
+++ b/src/renderer/src/Assets/CSS/vueflow.css
@@ -2,6 +2,10 @@
     outline: none;
 }
 
+.dark .vue-flow__edge-path{
+    stroke: #596481;
+}
+
 .dark .vue-flow__background{
     background-color: #090B10;
 }
