--- a/src/renderer/src/assets/css/scrollbar.css
+++ b/src/renderer/src/assets/css/scrollbar.css
@@ -1,26 +1,39 @@
 .dark .scrollbar-slim::-webkit-scrollbar{
     width: 8px;
 }
-
 .dark .scrollbar-slim::-webkit-scrollbar-track {
     background: #272F45;
 }
-
 .dark .scrollbar-slim::-webkit-scrollbar-thumb {
     border-radius: 2px;
     background: #40485f;
 }
 
 .os-scrollbar .os-scrollbar-handle{
-    background-color: #9efff91a;
+    background-color: #516867d9;
 }
 .os-scrollbar .os-scrollbar-handle:hover{
-    background-color: #9efff9fa;
+    background-color: #004643d9;
 }
 
 .os-scrollbar .os-scrollbar-track{
-    background-color: #272F45;
+    background-color: #a5a9b5;
 }
 .os-scrollbar .os-scrollbar-track:hover{
+    background-color: #00464357;
+}
+
+
+.dark .os-scrollbar .os-scrollbar-handle{
+    background-color: #9efff91a;
+}
+.dark .os-scrollbar .os-scrollbar-handle:hover{
+    background-color: #9efff9fa;
+}
+
+.dark .os-scrollbar .os-scrollbar-track{
+    background-color: #272F45;
+}
+.dark .os-scrollbar .os-scrollbar-track:hover{
     background-color: #272F45;
 }
