Change the color pattern of the canvas based on whether the application is in light mode or dark mode

--- a/src/renderer/src/assets/css/vueflow.css
+++ b/src/renderer/src/assets/css/vueflow.css
@@ -9,6 +9,10 @@
     stroke: #596481;
 }
 
+.vue-flow__background{
+    background-color: #f8fafc;
+}
+
 .dark .vue-flow__background{
     background-color: #090B10;
 }
