Change light mode UI color schemes

--- a/src/renderer/src/assets/css/scrollbar.css
+++ b/src/renderer/src/assets/css/scrollbar.css
@@ -10,10 +10,10 @@
 }
 
 .os-scrollbar .os-scrollbar-handle{
-    background-color: #516867d9;
+    background-color: #4c656fd9;
 }
 .os-scrollbar .os-scrollbar-handle:hover{
-    background-color: #004643d9;
+    background-color: #0891b2;
 }
 
 .os-scrollbar .os-scrollbar-track{
