Fix UI bug where columns from inactive table nodes become highlighted when hovering table node's edge

--- a/src/renderer/src/assets/css/vueflow.css
+++ b/src/renderer/src/assets/css/vueflow.css
@@ -2,9 +2,9 @@
     outline: none;
 }
 
-.vue-flow__edge path{
-    stroke-width: 2.5;
-}
+/*.vue-flow__edge path{*/
+/*    stroke-width: 2.5;*/
+/*}*/
 
 .vue-flow__edge-path{
     stroke: #475569;
